package ontap.decorator.bt5l2;

public interface SanPham {
    public String getTen();
    public double getGia();
}
